external-projects/sui-prover/crates/sui-prover/tests/snapshots/dynamic_object_field/exists_.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/dynamic_object_field/exists_.fail.move:27:5
   │
27 │     ensures(dynamic_object_field::exists_(&x.id, 11));
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/dynamic_object_field/exists_.fail.move:21: foo_spec
